Enhanced recipe views. Reworked links. Some refactoring