@@ -6,12 +6,11 @@ import dev.thrako.receptaria.model.entity.recipe.RecipeEntity;
 import dev.thrako.receptaria.model.entity.recipe.dto.RecipeCardVM;
 import dev.thrako.receptaria.model.entity.user.UserEntity;
 import dev.thrako.receptaria.model.repository.RecipeRepository;
-import dev.thrako.receptaria.common.security.CurrentUser;
+import dev.thrako.receptaria.model.security.CurrentUser;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RecipeService {
@@ -34,11 +33,27 @@ public class RecipeService {
         return !this.recipeRepository.existsByAuthor_IdAndTitle(principalId, recipeTitle);
     }
 
-    public List<RecipeCardVM> getRecipeCards () {
+    public List<RecipeCardVM> getCardsAll (CurrentUser currentUser) {
 
         return this.recipeRepository.findAll().stream()
+                .filter(entity -> checkCanView(currentUser, entity))
                 .map(RecipeCardVM::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<RecipeCardVM> getCardsOwn (CurrentUser currentUser) {
+
+        return this.recipeRepository.findByAuthor_Id(currentUser.getId()).stream()
+                .map(RecipeCardVM::fromEntity)
+                .toList();
+    }
+
+    public List<RecipeCardVM> getRecipeCardsByAuthor (CurrentUser currentUser, Long authorId) {
+
+        return this.recipeRepository.findByAuthor_Id(authorId).stream()
+                .filter(entity -> checkCanView(currentUser, entity))
+                .map(RecipeCardVM::fromEntity)
+                .toList();
     }
 
     public List<String> findAllRecipeTitlesByAuthor (UserEntity author) {
@@ -53,26 +68,7 @@ public class RecipeService {
 
         final RecipeEntity recipeEntity = findById(recipeId);
 
-        if (isAuthor(currentUser, recipeEntity) || currentUser.isAdmin()) {
-
-            return Boolean.TRUE;
-        }
-
-        final VisibilityStatus visibilityStatus = recipeEntity.getVisibilityStatus();
-
-        switch (visibilityStatus) {
-            case PRIVATE -> {
-                return Boolean.FALSE;
-            }
-            case FOLLOWERS -> {
-                //TODO if (is in followers list) return TRUE;
-            }
-            case PUBLIC -> {
-                return Boolean.TRUE;
-            }
-        }
-
-        return Boolean.FALSE;
+        return checkCanView(currentUser, recipeEntity);
     }
 
     public Boolean checkCanEdit (CurrentUser currentUser, long recipeId) {
@@ -110,28 +106,42 @@ public class RecipeService {
         return isAuthor(currentUser, findById(recipeId));
     }
 
+    public void saveAndFlush (RecipeEntity recipeEntity) {
+
+        this.recipeRepository.saveAndFlush(recipeEntity);
+    }
+
     private static boolean isAuthor (CurrentUser currentUser, RecipeEntity recipeEntity) {
 
         return currentUser.getId().equals(recipeEntity.getAuthor().getId());
     }
 
-    public boolean addLike (Long recipeId, UserEntity visitorEntity) {
+    private static Boolean checkCanView (CurrentUser currentUser, RecipeEntity recipeEntity) {
 
-        final RecipeEntity recipeEntity = findById(recipeId);
-        final boolean addSuccess = recipeEntity.addLike(visitorEntity);
-        if (addSuccess) {
-            this.recipeRepository.saveAndFlush(recipeEntity);
+        if (null == currentUser) {
+
+            return recipeEntity.getVisibilityStatus().equals(VisibilityStatus.PUBLIC);
         }
-        return addSuccess;
-    }
 
-    public boolean removeLike (Long recipeId, UserEntity visitorEntity) {
+        if (isAuthor(currentUser, recipeEntity) || currentUser.isAdmin()) {
 
-        return findById(recipeId).removeLike(visitorEntity);
-    }
+            return Boolean.TRUE;
+        }
 
-    public void saveAndFlush (RecipeEntity recipeEntity) {
+        final VisibilityStatus visibilityStatus = recipeEntity.getVisibilityStatus();
 
-        this.recipeRepository.saveAndFlush(recipeEntity);
+        switch (visibilityStatus) {
+            case PRIVATE -> {
+                return Boolean.FALSE;
+            }
+            case FOLLOWERS -> {
+                //TODO if (is in followers list) return TRUE;
+            }
+            case PUBLIC -> {
+                return Boolean.TRUE;
+            }
+        }
+
+        return Boolean.FALSE;
     }
 }
